--- a/app/src/main/res/layout/main_navigation_drawer2.xml
+++ b/app/src/main/res/layout/main_navigation_drawer2.xml
@@ -33,8 +33,8 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:paddingLeft="10dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp">
+            android:paddingBottom="15dp"
+            android:paddingTop="15dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -42,10 +42,9 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView12"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Welcome Dear "
+                    android:text="Welcome Dr "
                     android:textColor="@color/blue"
                     android:textStyle="bold" />
 
@@ -64,10 +63,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
-        android:paddingBottom="15dp"
+        android:orientation="vertical"
         android:paddingTop="15dp"
-        android:orientation="vertical">
+        android:paddingLeft="10dp"
+        android:paddingBottom="15dp">
 
         <TextView
             android:layout_width="match_parent"
@@ -80,164 +79,55 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingBottom="8dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingBottom="8dp">
 
             <TextView
                 android:layout_width="85dp"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:text="Name" />
+                android:text="Name"
+                android:textColor="@color/black" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:text=": " />
+                android:text=": "
+                android:textColor="@color/black" />
 
             <TextView
                 android:id="@+id/nameTV2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Name"
                 android:textColor="@color/black"
-                android:textStyle="bold"
-                android:text="Name" />
+                android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingBottom="8dp"
-
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="85dp"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:text="Age" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:text=": " />
-
-            <TextView
-                android:id="@+id/ageTV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                android:text="Age" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingBottom="8dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingBottom="8dp">
 
             <TextView
                 android:layout_width="85dp"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:text="Date of Birth" />
+                android:text="Gender"
+                android:textColor="@color/black" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:text=": " />
-
-            <TextView
-                android:id="@+id/dobTV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                android:text="dd/MM/yyyy" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingBottom="8dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="85dp"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:text="Height (cm)" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:text=": " />
-
-            <TextView
-                android:id="@+id/heightTV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                android:text="XXX" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingBottom="8dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="85dp"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:text="Weight (kg)" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:text=": " />
-
-            <TextView
-                android:id="@+id/weightTV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                android:text="XX.XX" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingBottom="8dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="85dp"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:text="Gender" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:text=": " />
+                android:text=": "
+                android:textColor="@color/black" />
 
             <TextView
                 android:id="@+id/genderTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Male/Female"
                 android:textColor="@color/black"
-                android:textStyle="bold"
-                android:text="Male/Female" />
+                android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
@@ -248,22 +138,22 @@
             <TextView
                 android:layout_width="85dp"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:text="Email" />
+                android:text="Email"
+                android:textColor="@color/black" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:text=": " />
+                android:text=": "
+                android:textColor="@color/black" />
 
             <TextView
                 android:id="@+id/emailTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="email@gmail.com"
                 android:textColor="@color/blue"
-                android:textStyle="bold"
-                android:text="email@gmail.com" />
+                android:textStyle="bold" />
         </LinearLayout>
 
     </LinearLayout>
