--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="blue">#21519d</color>
     <color name="teal">#05d8c4</color>
     <color name="grey">#f0f0f0</color>
+    <color name="darkgrey">#555555</color>
     <color name="transparent">#00000000</color>
 </resources>
