--- a/app/src/main/res/layout/activity_sign_up_choose_account.xml
+++ b/app/src/main/res/layout/activity_sign_up_choose_account.xml
@@ -102,7 +102,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Doctor"
+                    android:text="Prescriber"
                     android:textColor="@color/white"
                     android:textSize="18dp"
                     android:textStyle="bold" />
