--- a/app/src/main/res/layout/main_navigation_drawer2.xml
+++ b/app/src/main/res/layout/main_navigation_drawer2.xml
@@ -44,7 +44,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Welcome Dr "
+                    android:text="Welcome "
                     android:textColor="@color/blue"
                     android:textStyle="bold" />
 
