--- a/app/src/main/res/layout/recycler_data_cont2.xml
+++ b/app/src/main/res/layout/recycler_data_cont2.xml
@@ -26,7 +26,7 @@
                 android:id="@+id/textView10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Prescribing Doctor"
+                android:text="Prescriber"
                 android:textColor="@color/maroon"
                 android:textStyle="bold" />
 
