--- a/app/src/main/res/layout/recycler_data_cont2.xml
+++ b/app/src/main/res/layout/recycler_data_cont2.xml
@@ -220,7 +220,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
-                android:text="Strengthening and Residence: " />
+                android:text="Strengthening and Resistance: " />
 
             <TextView
                 android:id="@+id/strengthTV"
