--- a/app/src/main/res/layout/activity_user_exercise_chart.xml
+++ b/app/src/main/res/layout/activity_user_exercise_chart.xml
@@ -4,6 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/white_bg"
     tools:context=".UserExerciseChart">
+
+    <com.github.mikephil.charting.charts.BarChart
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/barChart"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
